--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <title>Home - Draw.js</title>
     </head>
     <body>
-        <script src="https://raw.githubusercontent.com/metype/Draw.js/master/draw.js"></script></script>
+        <script src="https://github.com/metype/Draw.js/blob/master/draw.js"></script></script>
     </body>
     </html>
     
