--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <title>Home - Draw.js</title>
     </head>
     <body>
-        <script src="https://github.com/metype/Draw.js/blob/master/draw.js"></script></script>
+        <script src="https://drive.google.com/open?id=1vG9qa_kmTb1WAKM1THi53G8-RTv57QIg"></script></script>
     </body>
     </html>
     
