--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <title>Home - Draw.js</title>
     </head>
     <body>
-        <script src="Draw.js"></script></script>
+        <script src="draw.js"></script></script>
         <script src="code.js"></script></script>
     </body>
     </html>
