--- a/reference.html
+++ b/reference.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
-<h1 style:"text-align:center">Draw.js Reference</h1>
+  <head>
+    <style src="style.css"></style>
+<h1 style="text-align:center">Draw.js Reference</h1>
+  </head>
 
 </html>
