--- a/reference.html
+++ b/reference.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <style src="style.css"></style>
-<h1 style="text-align:center">Draw.js Reference</h1>
+<h1>Draw.js Reference</h1>
   </head>
 
 </html>
