--- a/reference.html
+++ b/reference.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style src="style.css"></style>
+    <style>
+    h1 {
+  text-align: center;
+  color: cyan;
+} 
+    </style>
 <h1>Draw.js Reference</h1>
   </head>
 
