--- a/reference.html
+++ b/reference.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="draw.js"></script>
     <style>
     h1 {
   text-align: center;
@@ -9,5 +10,6 @@
     </style>
 <h1>Draw.js Reference</h1>
   </head>
-
+<body>
+  </body>
 </html>
