--- a/reference.html
+++ b/reference.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="draw.js"></script>
+    <script src="code.js"></script>
     <style>
     h1 {
   text-align: center;
