--- a/reference.html
+++ b/reference.html
@@ -3,12 +3,7 @@
   <head>
     <script src="draw.js"></script>
     <script src="code.js"></script>
-    <style>
-    h1 {
-  text-align: center;
-  color: cyan;
-} 
-    </style>
+    <style src="style.css"></style> 
 <h1>Draw.js Reference</h1>
   </head>
 <body>
